[gd_scene load_steps=62 format=4 uid="uid://ciovvt2xjx142"]

[ext_resource type="Script" uid="uid://byfjo2d33kpkp" path="res://Comman/scripts/Main.gd" id="1_3emcu"]
[ext_resource type="Script" uid="uid://b5waj2e4wqtrx" path="res://UISystem/controller_UI.gd" id="2_l603a"]
[ext_resource type="Shader" uid="uid://due4qitpd7wj2" path="res://CharacterSystem/PlayerSystem/flame/fire_normal.gdshader" id="3_srfbq"]
[ext_resource type="PackedScene" uid="uid://btxd7vy5emb30" path="res://UISystem/sences/UI_skill_button.tscn" id="4_2g28e"]
[ext_resource type="Script" uid="uid://h2up6iw5yei7" path="res://InputSystem/controller_input.gd" id="4_13t6m"]
[ext_resource type="Script" uid="uid://cw1hregi2vy0c" path="res://MapSystem/controller_map.gd" id="5_6t1ta"]
[ext_resource type="TileSet" uid="uid://p8qqfvvg61fv" path="res://MapSystem/res/Isometric.tres" id="6_j784c"]
[ext_resource type="Shader" uid="uid://bkl46r36pjrsj" path="res://Shader/liquid_sphere_v2.gdshader" id="6_k1ek1"]
[ext_resource type="Script" uid="uid://b41vebs8ruviq" path="res://CharacterSystem/PlayerSystem/controller_player.gd" id="7_ace6p"]
[ext_resource type="Shader" uid="uid://dpuucbgpdh0aq" path="res://Shader/radial_fire.gdshader" id="7_k1ek1"]
[ext_resource type="Script" uid="uid://cq5xu6dmoswvs" path="res://MouseSystem/controller_mouse.gd" id="9_d8fua"]
[ext_resource type="Script" uid="uid://dja6m5qp3n6c5" path="res://CharacterSystem/EnemySystem/controller_enemy.gd" id="9_rsc2q"]
[ext_resource type="TileSet" uid="uid://ubpdr2jfl6rk" path="res://MapSystem/res/new_tile_set.tres" id="10_f6k2u"]
[ext_resource type="Script" uid="uid://de68ucrdnd67t" path="res://CameraSystem/controller_camera.gd" id="12_qdqgx"]
[ext_resource type="PackedScene" uid="uid://dge0hsj3xs1bj" path="res://CharacterSystem/EnemySystem/sences/enemy_.tscn" id="13_pf7xi"]
[ext_resource type="Shader" uid="uid://y5hkbuhl3qon" path="res://Shader/star_field.gdshader" id="15_hmssc"]
[ext_resource type="Script" uid="uid://4nm466p75wd2" path="res://MapSystem/sences/layer_.gd" id="16_d8fua"]
[ext_resource type="Shader" uid="uid://bnibwh0pbokyj" path="res://Shader/rain.gdshader" id="16_ni732"]
[ext_resource type="Shader" uid="uid://cv38pb0ljkkk2" path="res://Shader/dotted_outline.gdshader" id="17_f53ol"]
[ext_resource type="Shader" uid="uid://u8qhl7lfxhy" path="res://Shader/spark_star.gdshader" id="20_dxmf3"]
[ext_resource type="Shader" uid="uid://cyiu87gr2dead" path="res://Shader/fire_v1.gdshader" id="21_x6d7j"]
[ext_resource type="Shader" uid="uid://coi7pv66sw0ta" path="res://Shader/radial_shine_v1.gdshader" id="22_d7t7n"]
[ext_resource type="Shader" uid="uid://ct0jadxgnosrn" path="res://Shader/radial_shine_v2.gdshader" id="23_arhbe"]
[ext_resource type="Shader" uid="uid://cpsc0r2xc2ql3" path="res://Shader/scan_line.gdshader" id="24_s73ar"]
[ext_resource type="Shader" uid="uid://dpoe8jx0bxnvq" path="res://Shader/explose.gdshader" id="25_v50mu"]
[ext_resource type="Script" uid="uid://cq5bymy3xgny" path="res://Bullet/BulletPool.gd" id="26_d2n4r"]
[ext_resource type="Shader" uid="uid://bg4e8eib2mrfm" path="res://Shader/ps2.gdshader" id="26_gfqxi"]
[ext_resource type="Shader" uid="uid://d2mrjdu06kl6b" path="res://Shader/height_line.gdshader" id="27_fge3v"]
[ext_resource type="Shader" uid="uid://d2f0b81ohxaae" path="res://Shader/circle.gdshader" id="28_pf7xi"]
[ext_resource type="Shader" uid="uid://bw27d7lbq3cbl" path="res://Shader/health_bar.gdshader" id="29_d8fua"]
[ext_resource type="Shader" uid="uid://dxxkjqeoy3yj2" path="res://Shader/ring.gdshader" id="29_jqumb"]
[ext_resource type="Script" uid="uid://4w5rnxd4otb0" path="res://UISystem/ui_start.gd" id="32_f6k2u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6k2u"]
shader = ExtResource("28_pf7xi")
shader_parameter/ring_color = Color(1, 0, 0, 0.5)
shader_parameter/inner_radius = 0.3
shader_parameter/outer_radius = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ni732"]
shader = ExtResource("15_hmssc")
shader_parameter/mouse = Vector2(0, 0)
shader_parameter/time = 0.0
shader_parameter/speed2 = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f53ol"]
shader = ExtResource("16_ni732")
shader_parameter/rain_amount = 200.0
shader_parameter/near_rain_length = 0.2
shader_parameter/far_rain_length = 0.1
shader_parameter/near_rain_width = 1.0
shader_parameter/far_rain_width = 0.5
shader_parameter/near_rain_transparency = 1.0
shader_parameter/far_rain_transparency = 0.5
shader_parameter/rain_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/base_rain_speed = 0.5
shader_parameter/additional_rain_speed = 0.5
shader_parameter/slant = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ghn5"]
shader = ExtResource("17_f53ol")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/inner_stroke_thickness = 1.0
shader_parameter/inner_stroke_opacity = 2.0
shader_parameter/inside_opacity = 1.0
shader_parameter/frequency = 8.0
shader_parameter/phase_speed = 9.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6d7j"]
shader = ExtResource("20_dxmf3")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/alpha = -0.5
shader_parameter/shney_disperse = 1.0
shader_parameter/shney_speed = 0.5
shader_parameter/twist_speed = 1.0
shader_parameter/rota_speed = 1.0
shader_parameter/curve_ci = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d7t7n"]
shader = ExtResource("7_k1ek1")
shader_parameter/root_color = Color(1, 0.75, 0.3, 1)
shader_parameter/tip_color = Color(1, 0.03, 0.001, 1)
shader_parameter/poster_color = 6.0
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(0.015, 0.5)
shader_parameter/fire_aperture = 0.22
shader_parameter/vignette_radius = 0.25
shader_parameter/vignette_falloff = 0.25
shader_parameter/noise_influence = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_x6d7j"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d7t7n"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_arhbe"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s73ar"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v50mu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arhbe"]
shader = ExtResource("21_x6d7j")
shader_parameter/fire_scale = Vector2(1, 1)
shader_parameter/fire_speed_direction = Vector2(0, 1)
shader_parameter/fire_noise = SubResource("NoiseTexture2D_arhbe")
shader_parameter/fire_height_gradient = SubResource("NoiseTexture2D_d7t7n")
shader_parameter/fire_shape_gradient = SubResource("NoiseTexture2D_s73ar")
shader_parameter/flame_height_gradient = SubResource("NoiseTexture2D_v50mu")
shader_parameter/fire_color = SubResource("NoiseTexture2D_x6d7j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s73ar"]
shader = ExtResource("22_d7t7n")
shader_parameter/shine_num = 8.0
shader_parameter/rotation_speed = 3.0
shader_parameter/light_magnitude = 2.0
shader_parameter/filter_distence = 1.0
shader_parameter/filter_magnitude = 1.0
shader_parameter/filter_minv = 0.75
shader_parameter/cut_inner_radius = 0.1
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/NOISE_speed = Vector2(0, 0)
shader_parameter/NOISE_magnitude = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v50mu"]
shader = ExtResource("23_arhbe")
shader_parameter/amplitude = 100.0
shader_parameter/frequency = 8.0
shader_parameter/light_magnitude = 30.0
shader_parameter/color_spread = 0.3
shader_parameter/light_distance = 0.09
shader_parameter/speed = 0.03
shader_parameter/cut_angle = true
shader_parameter/angle = 120.0
shader_parameter/yshift = -0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfqxi"]
shader = ExtResource("24_s73ar")
shader_parameter/fill_color = Color(0.5, 0.5, 0.5, 1)
shader_parameter/line_color = Color(0, 1, 0, 1)
shader_parameter/line_thickness = 0.01
shader_parameter/speed = 1.0
shader_parameter/radar_radius = 0.4
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/enemy1_pos = Vector2(0.3, 0.3)
shader_parameter/enemy1_size = 0.03
shader_parameter/enemy1_color = Vector4(1, 0, 0, 1)
shader_parameter/enemy2_pos = Vector2(0.7, 0.4)
shader_parameter/enemy2_size = 0.025
shader_parameter/enemy2_color = Vector4(1, 1, 0, 1)
shader_parameter/enemy3_pos = Vector2(0.5, 0.7)
shader_parameter/enemy3_size = 0.035
shader_parameter/enemy3_color = Vector4(0, 1, 1, 1)
shader_parameter/enemy4_pos = Vector2(0.2, 0.6)
shader_parameter/enemy4_size = 0.02
shader_parameter/enemy4_color = Vector4(1, 0.5, 0, 1)
shader_parameter/enemy5_pos = Vector2(0.8, 0.2)
shader_parameter/enemy5_size = 0.04
shader_parameter/enemy5_color = Vector4(0.5, 0, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fge3v"]
shader = ExtResource("25_v50mu")
shader_parameter/boom_pal1 = Vector3(0.2, 0.15, 0.3)
shader_parameter/boom_pal2 = Vector3(0.9, 0.15, 0.05)
shader_parameter/boom_pal3 = Vector3(0.9, 0.5, 0.1)
shader_parameter/boom_pal4 = Vector3(0.95, 0.95, 0.35)
shader_parameter/smoke_pal1 = Vector3(0.2, 0.15, 0.3)
shader_parameter/smoke_pal2 = Vector3(0.35, 0.3, 0.45)
shader_parameter/smoke_pal3 = Vector3(0.5, 0.45, 0.6)
shader_parameter/size = 5.0
shader_parameter/disperse = 1.0
shader_parameter/boom_repeat = 1.0
shader_parameter/boom_shape = 12.0
shader_parameter/boom_distortion = 0.5
shader_parameter/boom_bubbles = 0.5
shader_parameter/boom_bw = 0.5
shader_parameter/smoke_repeat = 1.0
shader_parameter/smoke_shape = 16.0
shader_parameter/smoke_distortion = 1.5
shader_parameter/smoke_bubbles = 0.5
shader_parameter/smoke_bw = 0.75
shader_parameter/disp = Vector2(0, 0)

[sub_resource type="CurveTexture" id="CurveTexture_fge3v"]

[sub_resource type="CurveTexture" id="CurveTexture_pf7xi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jqumb"]
shader = ExtResource("26_gfqxi")
shader_parameter/iChannel0 = SubResource("CurveTexture_fge3v")
shader_parameter/iChannel1 = SubResource("CurveTexture_pf7xi")
shader_parameter/iTime = 1.0
shader_parameter/scale_modifier = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf7xi"]
shader = ExtResource("27_fge3v")
shader_parameter/Spacing_Factor = 4.0
shader_parameter/Height = 1.0
shader_parameter/Height_Per_Major = 5.0
shader_parameter/Minor_Line_Size = 0.716
shader_parameter/Major_Line_Size = 0.75
shader_parameter/Thickness = 0.4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d8fua"]
shader = ExtResource("28_pf7xi")
shader_parameter/ring_color = Color(0.962041, 0.19263, 0, 0.5)
shader_parameter/inner_radius = 0.45
shader_parameter/outer_radius = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2n4r"]
shader = ExtResource("29_jqumb")
shader_parameter/map_center = Vector2(90, 90)
shader_parameter/inner_radius = 50.0
shader_parameter/outer_radius = 55.0
shader_parameter/ring_color = Color(1, 1, 1, 1)
shader_parameter/tile_size = Vector2(64, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1mtjm"]
shader = ExtResource("29_d8fua")
shader_parameter/color = Color(0.287082, 0.77, 0.2233, 1)
shader_parameter/health = 0.12

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5ej7w"]
blend_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5cbny"]
shader = ExtResource("3_srfbq")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/zoom = 6.0
shader_parameter/flame_color_top = Color(1, 0.5, 0, 1)
shader_parameter/flame_color_bottom = Color(0, 0.3, 1, 1)
shader_parameter/flame_width = 2.0
shader_parameter/flame_curve = 4.0
shader_parameter/flame_shape = 0.3
shader_parameter/flame_power = 0.7
shader_parameter/flame_bottom = 0.26
shader_parameter/flame_gradient = 4.0
shader_parameter/flame_red_brightness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k1ek1"]
shader = ExtResource("6_k1ek1")
shader_parameter/backFillColour = Color(0.62, 1, 1, 1)
shader_parameter/frontFillInnerColour = Color(0.35, 1, 1, 1)
shader_parameter/frontFillOuterColour = Color(0, 0.35, 1, 1)
shader_parameter/ringColour = Color(0, 0.16, 0.13, 1)
shader_parameter/fresnelColour = Color(0, 0.88, 1, 1)
shader_parameter/innerRingGlowColour = Color(0, 1, 1, 1)
shader_parameter/fillcolour = Color(1, 1, 1, 1)
shader_parameter/ringWidth = 0.15
shader_parameter/innerCircleRadiusOffset = 0.0
shader_parameter/fill_value = 0.25

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_k1ek1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dxmf3"]
shader = ExtResource("7_k1ek1")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_k1ek1")
shader_parameter/root_color = Color(1, 0.75, 0.3, 1)
shader_parameter/tip_color = Color(1, 0.03, 0.001, 1)
shader_parameter/poster_color = 6.0
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(0.015, 0.5)
shader_parameter/fire_aperture = 0.22
shader_parameter/vignette_radius = 0.25
shader_parameter/vignette_falloff = 0.25
shader_parameter/noise_influence = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrmdt"]
shader = ExtResource("24_s73ar")
shader_parameter/fill_color = Color(0, 0.1, 0, 1)
shader_parameter/line_color = Color(0.9, 0.9, 0.7, 0.8)
shader_parameter/line_thickness = 0.02
shader_parameter/speed = 1.0
shader_parameter/radar_radius = 0.4
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/enemy1_pos = Vector2(0.3, 0.3)
shader_parameter/enemy1_size = 0.005
shader_parameter/enemy1_color = Vector4(1, 0, 0, 1)
shader_parameter/enemy2_pos = Vector2(0.7, 0.4)
shader_parameter/enemy2_size = 0.025
shader_parameter/enemy2_color = Vector4(1, 1, 0, 1)
shader_parameter/enemy3_pos = Vector2(0.5, 0.7)
shader_parameter/enemy3_size = 0.035
shader_parameter/enemy3_color = Vector4(0, 1, 1, 1)
shader_parameter/enemy4_pos = Vector2(0.2, 0.6)
shader_parameter/enemy4_size = 0.02
shader_parameter/enemy4_color = Vector4(1, 0.5, 0, 1)
shader_parameter/enemy5_pos = Vector2(0.8, 0.2)
shader_parameter/enemy5_size = 0.04
shader_parameter/enemy5_color = Vector4(0.5, 0, 1, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_3emcu")

[node name="InputController" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_13t6m")

[node name="Environment" type="Node2D" parent="."]
y_sort_enabled = true

[node name="MouseController" type="Node2D" parent="Environment"]
unique_name_in_owner = true
script = ExtResource("9_d8fua")

[node name="Ring" type="Node2D" parent="Environment/MouseController"]

[node name="DrawRing" type="ColorRect" parent="Environment/MouseController/Ring"]
z_index = 2
material = SubResource("ShaderMaterial_f6k2u")
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 75.0
scale = Vector2(1, 0.5)

[node name="PlayerController" type="Node2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
script = ExtResource("7_ace6p")

[node name="EnemyController" type="Node2D" parent="Environment"]
unique_name_in_owner = true
script = ExtResource("9_rsc2q")

[node name="Enemy" parent="Environment/EnemyController" instance=ExtResource("13_pf7xi")]
z_index = 1
position = Vector2(308, -122)

[node name="MapController" type="Node2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
script = ExtResource("5_6t1ta")

[node name="Background" type="TileMapLayer" parent="Environment/MapController"]
tile_map_data = PackedByteArray("AABVAML/AQAFAAAAAABVAMP/AQAFAAAAAAA=")
tile_set = ExtResource("6_j784c")

[node name="Showground" type="TileMapLayer" parent="Environment/MapController"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -16)
tile_map_data = PackedByteArray("AAAFAPb/AQAEAAAAAAAGAPX/AQAEAAAAAAAGAPT/AQAEAAAAAAAEAPL/AQAEAAAAAAAEAPP/AQAEAAAAAAAFAPL/AQAEAAAAAAAFAPP/AQAEAAAAAAAGAPL/AQAEAAAAAAAGAPP/AQAEAAAAAAACAPX/AQAEAAAAAAAHAPn/AQAEAAAAAAAIAPn/AQAEAAAAAAA=")
tile_set = ExtResource("6_j784c")
y_sort_origin = 1

[node name="layer" type="TileMapLayer" parent="Environment/MapController"]
tile_map_data = PackedByteArray("AAD9//z/BAAKAAAAAAD9//3/BAAKAAAAAAD9//7/BAAKAAAAAAD9////BAAKAAAAAAD9/wEABAAKAAAAAAD9/wIABAAKAAAAAAD9/wMABAAKAAAAAAD9/wQABAAKAAAAAAD9/wUABAAKAAAAAAD9/wYABAAKAAAAAAD+//z/BAAKAAAAAAD+//3/BAAKAAAAAAD+//7/BAAKAAAAAAD+////BAAKAAAAAAD+/wAABAAKAAAAAAD+/wEABAAKAAAAAAD+/wIABAAKAAAAAAD+/wMABAAKAAAAAAD+/wQABAAKAAAAAAD+/wUABAAKAAAAAAD+/wYABAAKAAAAAAD///z/BAAKAAAAAAD///3/BAAKAAAAAAD///7/BAAKAAAAAAD/////BAAKAAAAAAD//wAABAAKAAAAAAD//wEABAAKAAAAAAD//wIABAAKAAAAAAD//wMABAAKAAAAAAD//wQABAAKAAAAAAD//wUABAAKAAAAAAD//wYABAAKAAAAAAAAAPz/BAAKAAAAAAAAAP3/BAAKAAAAAAAAAP7/BAAKAAAAAAAAAP//BAAKAAAAAAAAAAAABAAKAAAAAAAAAAEABAAKAAAAAAAAAAIABAAKAAAAAAAAAAMABAAKAAAAAAAAAAQABAAKAAAAAAAAAAUABAAKAAAAAAAAAAYABAAKAAAAAAABAPz/BAAKAAAAAAABAP3/BAAKAAAAAAABAP7/BAAKAAAAAAABAP//BAAKAAAAAAABAAAABAAKAAAAAAABAAEABAAKAAAAAAABAAIABAAKAAAAAAABAAMABAAKAAAAAAABAAQABAAKAAAAAAABAAUABAAKAAAAAAABAAYABAAKAAAAAAACAPz/BAAKAAAAAAACAP3/BAAKAAAAAAACAP7/BAAKAAAAAAACAP//BAAKAAAAAAACAAAABAAKAAAAAAACAAEABAAKAAAAAAACAAIABAAKAAAAAAACAAMABAAKAAAAAAACAAQABAAKAAAAAAACAAUABAAKAAAAAAACAAYABAAKAAAAAAADAPz/BAAKAAAAAAADAP3/BAAKAAAAAAADAP7/BAAKAAAAAAADAP//BAAKAAAAAAADAAAABAAKAAAAAAADAAEABAAKAAAAAAADAAIABAAKAAAAAAADAAMABAAKAAAAAAADAAQABAAKAAAAAAADAAUABAAKAAAAAAADAAYABAAKAAAAAAAEAPz/BAAKAAAAAAAEAP3/BAAKAAAAAAAEAP7/BAAKAAAAAAAEAP//BAAKAAAAAAAEAAAABAAKAAAAAAAEAAEABAAKAAAAAAAEAAIABAAKAAAAAAAEAAMABAAKAAAAAAAEAAQABAAKAAAAAAAEAAUABAAKAAAAAAAEAAYABAAKAAAAAAD9/wAABAAKAAAAAAD9//j/BAAFAAEAAAD9//n/BAAFAAEAAAD+//j/BAAFAAEAAAD+//n/BAAFAAEAAAD///j/BAAFAAEAAAD///n/BAAFAAEAAAAAAPj/BAAFAAEAAAAAAPn/BAAFAAEAAAA=")
tile_set = ExtResource("10_f6k2u")
script = ExtResource("16_d8fua")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Environment"]
energy = 0.08

[node name="Background" type="Node2D" parent="Environment"]
z_index = -1

[node name="ColorRect" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_ni732")
offset_left = 16.0
offset_top = -3215.0
offset_right = 4062.0
offset_bottom = 2162.0

[node name="ColorRect2" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_f53ol")
offset_left = -663.0
offset_top = -454.0
offset_right = -134.0
offset_bottom = 188.0
color = Color(1, 1, 1, 0)

[node name="ColorRect3" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_4ghn5")
offset_left = -359.0
offset_top = 178.0
offset_right = -187.0
offset_bottom = 359.0

[node name="ColorRect4" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_x6d7j")
offset_left = -454.0
offset_top = 215.0
offset_right = -414.0
offset_bottom = 255.0

[node name="ColorRect5" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_d7t7n")
offset_left = -169.0
offset_top = 221.0
offset_right = -129.0
offset_bottom = 261.0

[node name="ColorRect6" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_arhbe")
offset_left = -442.0
offset_top = 207.0
offset_right = -402.0
offset_bottom = 247.0

[node name="ColorRect7" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_s73ar")
offset_left = -441.0
offset_top = 267.0
offset_right = -401.0
offset_bottom = 307.0

[node name="ColorRect8" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_v50mu")
offset_left = -518.0
offset_top = 212.0
offset_right = -478.0
offset_bottom = 252.0

[node name="ColorRect9" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_gfqxi")
offset_left = -508.0
offset_top = 281.0
offset_right = -468.0
offset_bottom = 321.0

[node name="ColorRect10" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_fge3v")
offset_left = -711.0
offset_top = 218.0
offset_right = -515.0
offset_bottom = 309.0

[node name="ColorRect11" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_jqumb")
offset_left = -702.0
offset_top = 304.0
offset_right = -583.0
offset_bottom = 430.0

[node name="ColorRect12" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_pf7xi")
offset_left = -515.0
offset_top = 465.0
offset_right = -477.0
offset_bottom = 518.0

[node name="ColorRect13" type="ColorRect" parent="Environment/Background"]
z_index = 9
material = SubResource("ShaderMaterial_d8fua")
offset_left = 67.0
offset_top = 83.0
offset_right = 167.0
offset_bottom = 183.0
scale = Vector2(1, 0.5)
color = Color(0, 0, 0, 0)

[node name="ColorRect14" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_d2n4r")
offset_left = -773.0
offset_top = 43.0
offset_right = -733.0
offset_bottom = 83.0

[node name="ColorRect15" type="ColorRect" parent="Environment/Background"]
material = SubResource("ShaderMaterial_1mtjm")
offset_left = -104.0
offset_top = 247.0
offset_right = -64.0
offset_bottom = 250.0

[node name="BulletPool" type="Node2D" parent="Environment"]
script = ExtResource("26_d2n4r")

[node name="CameraController" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("12_qdqgx")

[node name="UI" type="Node" parent="."]

[node name="UI_game" type="CanvasLayer" parent="UI"]
visible = false
script = ExtResource("2_l603a")

[node name="Control" type="Control" parent="UI/UI_game"]
material = SubResource("CanvasItemMaterial_5ej7w")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/UI_game/Control"]
material = SubResource("ShaderMaterial_5cbny")
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0.451)

[node name="ColorRect3" type="ColorRect" parent="UI/UI_game/Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="AlertPanel" type="RichTextLabel" parent="UI/UI_game/Control"]
layout_mode = 2
offset_left = 1420.0
offset_top = 27.0
offset_right = 1920.0
offset_bottom = 27.0
bbcode_enabled = true
fit_content = true

[node name="PlayerList" type="VBoxContainer" parent="UI/UI_game/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UI_game/Control"]
layout_mode = 1
offset_right = 500.0
offset_bottom = 66.0
metadata/_edit_use_anchors_ = true

[node name="layer0" type="Button" parent="UI/UI_game/Control/VBoxContainer"]
layout_mode = 2
text = "layer0"

[node name="layer1" type="Button" parent="UI/UI_game/Control/VBoxContainer"]
layout_mode = 2
text = "layer1"

[node name="SkillList" type="HBoxContainer" parent="UI/UI_game/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Button" parent="UI/UI_game/Control/SkillList" instance=ExtResource("4_2g28e")]
layout_mode = 2

[node name="Button2" parent="UI/UI_game/Control/SkillList" instance=ExtResource("4_2g28e")]
layout_mode = 2

[node name="Water" type="ColorRect" parent="UI/UI_game/Control"]
material = SubResource("ShaderMaterial_k1ek1")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0

[node name="Fire" type="ColorRect" parent="UI/UI_game/Control"]
visible = false
material = SubResource("ShaderMaterial_dxmf3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="UI/UI_game/Control"]
material = SubResource("ShaderMaterial_qrmdt")
layout_mode = 1
offset_right = 300.0
offset_bottom = 300.0

[node name="HSlider" type="HSlider" parent="UI/UI_game/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -486.0
offset_top = 254.0
offset_right = -38.0
offset_bottom = 270.0
grow_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="OptionButton" type="OptionButton" parent="UI/UI_game/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
item_count = 1
popup/item_0/text = "123"
popup/item_0/id = 0

[node name="UI_start" type="CanvasLayer" parent="UI"]
script = ExtResource("32_f6k2u")

[node name="Control" type="Control" parent="UI/UI_start"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="start" type="Button" parent="UI/UI_start/Control"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[connection signal="value_changed" from="UI/UI_game/Control/HSlider" to="UI/UI_game" method="_visual_sacle"]
[connection signal="item_selected" from="UI/UI_game/Control/OptionButton" to="UI/UI_game" method="_movment_action_selected"]
[connection signal="pressed" from="UI/UI_start/Control/start" to="UI/UI_start" method="_on_start_pressed"]
